Fixed one work triangle that was too short

--- a/Pages/Work/styles/app/work-style.css
+++ b/Pages/Work/styles/app/work-style.css
@@ -105,7 +105,7 @@
 
 .project-preview-container:nth-child(odd) .preview-wrapper .left-corner {
     border-left: 0px solid transparent;
-    border-right: 40px solid transparent;
+    border-right: 60px solid transparent;
     border-top: 274px solid rgba(0, 0, 0, .5);
     border-bottom-style: none;
 
